syntax = "proto2";

package cross;

message SkillTianFu {
    required int32 tianFuId=1;
    required int32 level=2;
}

message SkillData {
    required int32 skillId = 1;
    required int32 level=2;
    required int64 lastTime=3;
    repeated SkillTianFu tianFuList=4;
}



message TeShuSkillData {
    required int32 skillId = 1;
    required int32 chuFaRate=2;
    required int32 diKangRate=3;
}


message SIPlayerTeshuSkillReset {
    repeated TeShuSkillData skillList=1;
}



